=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.8-dev, 2012-03-06


Version 0.3.8 (under dev!)
--------------------------

* core: add support of terminal "bracketed paste mode", new option
  weechat.look.paste_bracketed (task #11316)
* core: fix display of wide chars on last column of chat area (patch #7733)
* api: add list "gui_buffer_last_displayed" in hdata "buffer"
* irc: add support of "external" SASL mechanism (task #11864)
* irc: close server buffer when server is deleted
* irc: add search for lower case nicks in option irc.look.nick_color_force
* relay: add "date_printed" and "highlight" in signal "_buffer_line_added"
  (WeeChat protocol)
* rmodifier: add option "release" in default rmodifier "nickserv" (used to hide
  passwords in command "/msg nickserv") (bug #35705)

Version 0.3.7 (2012-02-26)
--------------------------

* core: add japanese translations
* core: fix expand of path `~` to home of user in function string_expand_home
  (`~/xxx` was ok, but not `~`)
* core: fix memory leak when closing buffer
* core: fix memory leak in function util_search_full_lib_name
* core: automatically add newline char after last pasted line (when pasting many
  lines with confirmation) (task #10703)
* core: fix bug with layout: assign layout number in buffers when doing
  /layout save
* core: do not auto add space after nick completer if option
  weechat.completion.nick_add_space is off
* core: fix signal "buffer_switch": send it only once when switching buffer
  (bug #31158)
* core: move option "scroll_unread" from command /input to /window
* core: add support of flags in regular expressions and highlight options
* core: add library "pthread" in cmake file for link on OpenBSD
* core: use extended regex in filters (task #9497, patch #7616)
* core: save current mouse state in option weechat.look.mouse (set option when
  mouse state is changed with command /mouse)
* core: add type "hashtable" for hdata