@@ -778,7 +778,7 @@ irc_channel_display_nick_back_in_pv (struct t_irc_server *server,
                 weechat_printf (ptr_channel->buffer,
                                 _("%s%s%s %s(%s%s%s)%s is back on server"),
                                 weechat_prefix ("join"),
-                                IRC_COLOR_NICK_IN_SERVER_MESSAGE(nick),
+                                irc_nick_color_for_server_message (nick, nickname),
                                 (nick) ? nick->name : nickname,
                                 IRC_COLOR_CHAT_DELIMITERS,
                                 IRC_COLOR_CHAT_HOST,
