@@ -89,6 +89,8 @@ extern char *irc_nick_as_prefix (struct t_irc_server *server,
                                  struct t_irc_nick *nick,
                                  const char *nickname,
                                  const char *force_color);
+extern const char *irc_nick_color_for_server_message (struct t_irc_nick *nick,
+                                                      const char *nickname);
 extern const char * irc_nick_color_for_pv (struct t_irc_channel *channel,
                                            const char *nickname);
 extern struct t_hdata *irc_nick_hdata_nick_cb (void *data,
